fix spacing between footer and grid

--- a/src/styles/ship-placement-screen.scss
+++ b/src/styles/ship-placement-screen.scss
@@ -15,6 +15,7 @@
 .directions {
   color: $navy-gray-chain;
   margin: 0 2rem;
+  text-align: center;
 }
 .button-field {
   display: flex;
@@ -26,10 +27,10 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  width: 75vmin;
+  width: 95vmin;
+  height: 95vmin;
   max-width: 500px;
   max-height: 500px;
-  height: 75vmin;
   &__element {
     border: solid 1px $navy-chain-outline;
     background-color: $navy-gray-chain;
@@ -40,7 +41,7 @@
 }
 @media screen and (orientation: landscape) {
   .ship-placement-screen {
-    grid-template-rows: 1fr auto auto;
+    grid-template-rows: .7fr auto auto;
     grid-template-columns: 1fr 1.5fr 1fr;
   }
   .welcome-msg {
@@ -51,5 +52,8 @@
   }
   .grid-container {
     grid-row: 2/-1;
+    width: 65vmin;
+    height: 65vmin;
+    align-self: start;
   }
 }
